@@ -346,6 +346,12 @@ same time.  (If you compile and install the code twice, with and
 without inversion symmetry, you should run <code>make distclean</code>
 in between.)
 
+<p><dt><code>--with-hermitian-epsilon</code>
+<dd>Support the use of <a
+href="user-ref.html#dielectric-anisotropic">complex-Hermitian
+dielectric tensors</a> (corresponding to magnetic materials, which
+break inversion symmetry).
+
 <p><dt><code>--without-fastblas</code>
 <dt><code>--with-fastblas=<i>lib</i></code>
 <dd>The <code>configure</code> script automatically attempts to detect
