@@ -1,3 +1,7 @@
+  * If MPB is configured with the flag --with-hermitian-epsilon, then
+    complex-Hermitian dielectric tensors (corresponding to magnetic
+    materials, which break time-reversal symmetry) are supported.
+
 MPB 0.13 (1/7/2001)
 
   * Can now take advantage of inversion symmetry in the geometry, gaining
